# radiance_nelier_simsv0p2

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  validation_report.qmd
data/experimental/005_26Junio/: 09h.csv  10h.csv  11h.csv  12h.csv  13h.csv  14h.csv  15h.csv  16h.csv  17h.csv  18h.csv
data/experimental/006_20Nov/: 09h.csv  10h.csv  11h.csv  12h.csv  13h.csv  14h.csv  15h.csv  16h.csv  17h.csv
edificio/: materials.rad  materials_calibrated.rad  materials_jun_optimal.rad  materials_nov_optimal.rad  nelier.wea  nelier_26jun_20novCST.epw  points.txt  points_validation.txt  scene.rad
edificio/objects/: Edificio-1.Bloque-1.Zona-1.3.blindgrp  Edificio-1.Bloque-1.Zona-1.5.blindgrp  glazing.geom  scene.geom
edificio/skyDomes/: skyglow.rad
scripts/: 004_comparison_tables.py  generate_sensor_grid_validation.py  run_parametric_grid_extended.py  run_parametric_single.py  run_simulation_validation_calibrated.sh  run_udi_simulations.sh
